projects/vb6parse/snapshots/syntax/library/statements/unload/unload_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/unload.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: UnloadStatement
      children:
        - kind: UnloadKeyword
          text: Unload
        - kind: Whitespace
          text: "    "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: Form1
    - kind: Whitespace
      text: "    "
    - kind: Newline
      text: "\n"
